// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pattern-rules-field Renders \`pattern-rules-field\` with custom props 1`] = `
<div
  class="layout column"
  required="required"
>
  <div
    class="layout justify-space-between align-center"
  >
    <div
      class="flex"
    >
      <pattern-rule-field-stub
        attributes="[object Object]"
        disabled="true"
        infos=""
        inputtypes="[object Object],[object Object],[object Object],[object Object]"
        intervalranges="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        name="key 1"
        operators="equal,not_equal,contains,not_contains,begins_with,not_begin_with,ends_with,not_end_with,regexp,is_one_of,is_not_one_of"
        rule="[object Object]"
        type="string"
      />
    </div>
    <c-action-btn-stub
      disabled="true"
      tooltip="Remove rule"
      type="delete"
    />
  </div>
  <div
    class="layout justify-space-between align-center"
  >
    <div
      class="flex"
    >
      <pattern-rule-field-stub
        attributes="[object Object]"
        disabled="true"
        infos=""
        inputtypes="[object Object],[object Object],[object Object],[object Object]"
        intervalranges="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        name="key 2"
        operators="equal,not_equal,contains,not_contains,begins_with,not_begin_with,ends_with,not_end_with,regexp,is_one_of,is_not_one_of"
        rule="[object Object]"
        type="string"
      />
    </div>
    <c-action-btn-stub
      disabled="true"
      tooltip="Remove rule"
      type="delete"
    />
  </div>
  <div
    class="layout justify-space-between align-center"
  >
    <div
      class="flex"
    >
      <pattern-rule-field-stub
        attributes="[object Object]"
        disabled="true"
        infos=""
        inputtypes="[object Object],[object Object],[object Object],[object Object]"
        intervalranges="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        name="key 3"
        operators="equal,not_equal,contains,not_contains,begins_with,not_begin_with,ends_with,not_end_with,regexp,is_one_of,is_not_one_of"
        rule="[object Object]"
        type="string"
      />
    </div>
    <c-action-btn-stub
      disabled="true"
      tooltip="Remove rule"
      type="delete"
    />
  </div>
  <div
    class="layout justify-space-between align-center"
  >
    <div
      class="flex"
    >
      <pattern-rule-field-stub
        attributes="[object Object]"
        customprop="customPropValue"
        disabled="true"
        infos=""
        inputtypes="[object Object],[object Object],[object Object],[object Object]"
        intervalranges="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        name="rule"
        operators="not_equal"
        rule="[object Object]"
        type="string"
      />
    </div>
    <c-action-btn-stub
      disabled="true"
      tooltip="Remove rule"
      type="delete"
    />
  </div>
  <div
    class="layout mt-2 align-center"
  >
    <button
      class="mr-2 v-btn v-btn--disabled v-btn--outlined theme--light v-size--default"
      disabled="disabled"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Add rule
      </span>
    </button>
    <span
      class="error--text"
      style="display: none;"
    >
      The rules include excluded rule.
    </span>
  </div>
</div>
`;

exports[`pattern-rules-field Renders \`pattern-rules-field\` with default props 1`] = `
<div
  class="layout column"
>
  <div
    class="layout mt-2 align-center"
  >
    <button
      class="mr-2 v-btn v-btn--outlined theme--light v-size--default primary--text"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Add rule
      </span>
    </button>
    <span
      class="error--text"
      style="display: none;"
    >
      The rules include excluded rule.
    </span>
  </div>
</div>
`;
